# fms-acceleration

./: .gitignore  README.md  tox.ini
.github/workflows/: build-and-publish.yml  build.yml  format.yml
benchmark_outputs/exp_1/: command.sh
libs/framework/: README.md  pyproject.toml
plugins/accelerated-attn/: .isort.cfg  .pylintrc  README.md  pyproject.toml  tox.ini
plugins/accelerated-moe/: .pylintrc  README.md  pyproject.toml  requirements-mb.txt
plugins/accelerated-peft/: README.md  pyproject.toml  requirements.txt  tox.ini
plugins/accelerated-peft/configs/: autogptq.yaml  bnb.yaml
plugins/accelerated-peft/src/fms_accelerate_peft/: autogptq_utils.py  framework_plugin_autogptq.py
plugins/accelerated-peft/src/fms_acceleration_peft/: autogptq_utils.py  framework_plugin_autogptq.py  framework_plugin_bnb.py  fsdp_utils.py
plugins/accelerated-peft/src/fms_acceleration_peft/gptqmodel/: __init__.py
plugins/accelerated-peft/src/fms_acceleration_peft/gptqmodel/models/: __init__.py  _const.py  auto.py  base.py  gpt_bigcode.py  gpt_neox.py  granite.py  granitemoe.py  llama.py  mistral.py  mixtral.py
plugins/accelerated-peft/src/fms_acceleration_peft/gptqmodel/nn_modules/: __init__.py
plugins/accelerated-peft/src/fms_acceleration_peft/gptqmodel/nn_modules/triton_utils/: dequant.py  kernels.py
plugins/accelerated-peft/src/fms_acceleration_peft/gptqmodel/quantization/: __init__.py  config.py  gptq.py
plugins/accelerated-peft/src/fms_acceleration_peft/gptqmodel/utils/: __init__.py  backend.py  data.py  importer.py  model.py  peft.py
plugins/accelerated-peft/src/gptqmodel/: __init__.py
plugins/accelerated-peft/src/gptqmodel/models/: __init__.py  dbrx.py  dbrx_converted.py  gemma.py
plugins/accelerated-peft/src/gptqmodel/nn_modules/qlinear/: qlinear_tritonv2.py
plugins/accelerated-peft/src/gptqmodel/nn_modules/triton_utils/: custom_autotune.py
plugins/accelerated-peft/src/gptqmodel/quantization/: __init__.py
plugins/accelerated-peft/src/gptqmodel/utils/: __init__.py  peft.py
plugins/accelerated-peft/tests/: test_gptqmodel.py  test_peft_plugins.py  test_q4_triton.py  test_triton.py
plugins/attention-and-distributed-packing/: README.md  pyproject.toml  tox.ini
plugins/framework/: README.md  pyproject.toml  tox.ini
plugins/framework/src/fms_acceleration/: __init__.py  accelerator_patcher.py  cli.py  constants.py  framework.py  framework_plugin.py  model_patcher.py
plugins/framework/src/fms_acceleration/utils/: __init__.py  test_utils.py  utils.py
plugins/framework/tests/: model_patcher_test_utils.py  test_accel_patcher.py  test_framework.py  test_model_patcher.py  test_model_patcher2.py  test_model_patcher_helpers.py
plugins/framework/tests/model_patcher_fixtures/: module2.py
plugins/framework/tests/model_patcher_fixtures/module1/: __init__.py  module1_1.py
plugins/framework/tests/model_patcher_fixtures/module1/module3/: __init__.py  module3_1.py
plugins/framework/tests/model_patcher_fixtures/module4/: __init__.py  module4_1.py
plugins/framework/tests/model_patcher_fixtures/module4/module5/: __init__.py  module5_1.py
plugins/fused-ops-and-kernels/: README.md  pyproject.toml  tox.ini
plugins/instruct-lab/: README.md  pyproject.toml  tox.ini
plugins/mamba-cp/: README.md  pyproject.toml  tox.ini
plugins/mamba-cp/configs/: mcp.yaml
plugins/mamba-cp/src/fms_acceleration_mcp/: __init__.py  framework_plugin_mcp.py
plugins/mamba-cp/src/fms_acceleration_mcp/utils/: __init__.py  utils.py
plugins/mamba-cp/tests/: test_mcp_plugin.py
plugins/online-data-mixing/: .pylintrc  README.md  pyproject.toml  tox.ini
plugins/online-data-mixing/artifacts/: custom_loop_usage.py
plugins/online-data-mixing/src/fms_acceleration_odm/: __init__.py  callback.py  framework_plugin_odm.py  patch.py
plugins/online-data-mixing/src/fms_acceleration_odm/odm/: __init__.py  auto_categorizer.py  dataloader.py  dataset.py  reward.py
plugins/online-data-mixing/tests/: test_auto_categorization.py  test_compute_reward.py  test_odm_plugin.py  test_online_data.py
plugins/unsloth/: README.md  pyproject.toml
plugins/unsloth/configs/: unsloth.yaml
plugins/unsloth/src/: __init__.py  unsloth_utils.py
plugins/unsloth/src/fms_acceleration_unsloth/: framework_plugin_unsloth_stackable.py
plugins/unsloth/src/fms_acceleration_unsloth/gptq/: fast_lora.py
plugins/unsloth/src/fms_acceleration_unsloth/gptq/triton/: layers.py
plugins/unsloth/src/fms_acceleration_unsloth/models/: mixtral.py
plugins/unsloth/src/models/: llama.py  mistral.py
sample-configurations/: CONTENTS.yaml  README.md  aadp-padding-free-multipack-foak-sample-configuration.yaml  aadp-padding-free-multipack-sample-configuration.yaml  accelerated-peft-autogptq-foak-liger-sample-configuration.yaml  accelerated-peft-autogptq-foak-padding-free-sample-configuration.yaml  accelerated-peft-autogptq-foak-sample-configuration.yaml  accelerated-peft-autogptq-unsloth-sample-configuration.yaml  accelerated-peft-bnb-nf4-foak-liger-sample-configuration.yaml  accelerated-peft-bnb-nf4-foak-padding-free-sample-configuration.yaml  accelerated-peft-bnb-nf4-foak-sample-configuration.yaml  accelerated-peft-bnb-nf4-sample-configuration.yaml  accelerated-peft-bnb-nf4-unsloth-sample-configuration.yaml  accelerated-peft-sample-config.yaml  baseline-ilab-sample-configuration.yaml  foak-fast-kernels-liger-sample-configuration.yaml  foak-fast-kernels-sample-configuration.yaml  moe-megablocks-sample-configuration.yaml  moe-scattermoe-granite-ep1-padding-free-sample-configuration.yaml  moe-scattermoe-granite-ep1-sample-configuration.yaml  moe-scattermoe-granite-ep2-padding-free-sample-configuration.yaml  moe-scattermoe-granite-ep2-sample-configuration.yaml  moe-scattermoe-granite-ep4-padding-free-sample-configuration.yaml  moe-scattermoe-granite-ep8-padding-free-foak-sample-configuration.yaml  moe-scattermoe-granite-ep8-padding-free-sample-configuration.yaml  moe-scattermoe-granite-ep8-sample-configuration.yaml  moe-scattermoe-granite-sample-configuration.yaml
scripts/: generate_sample_configurations.py  run_benchmarks.sh
(+137 files in other folders)
