[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fms-acceleration-mcp"
version = '0.1.2.dev'
description = "FMS Acceleration plugin for context parallel for mamba kernels"
authors = [
  {name = "Mehant Kammakomati", email = "mehant.kammakomati2@ibm.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~=3.11"
keywords = ['fms-hf-tuning', 'acceleration', 'mamba-cp']
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = ["pytest"]

[tool.hatch.build.targets.wheel]
only-include = ["src/fms_acceleration_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
