[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fms-acceleration-odm"
version = '0.1.4'
description = "FMS Acceleration plugin for online data mixing"
authors = [
  {name = "Mehant Kammakomati", email = "mehant.kammakomati2@ibm.com"},
  {name = "Romit Jain", email = "romit@ibm.com"},
  {name = "Padmanabha Venkatagiri Seshadri", email = "seshapad@in.ibm.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "~=3.11"
keywords = ['fms-hf-tuning', 'acceleration', 'online-data-mixing']
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
  "torch==2.8.0",
  "torchvision==0.23.0",
  "torchaudio==2.8.0",
  "scikit-learn",
  "datasets==4.*",
  "torchdata==0.11.0",
  "sentence-transformers==5.*",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
only-include = ["src/fms_acceleration_odm"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "README.md",
]
